--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Remainders"
+    
     xmlns:data="using:Remainders"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -56,15 +57,19 @@
                                 <Button.Flyout>
                                 <Flyout>
                                     <StackPanel >
-                                        <AutoSuggestBox 
-                                            Name="MyAutoSuggestBox" 
-                                            PlaceholderText="Search"  
-                                            TextChanged="MyAutoSuggestBox_TextChanged" 
-                                            SuggestionChosen="MyAutoSuggestBox_SuggestionChosen"
-                                            PointerEntered="MyAutoSuggestBox_PointerEntered"
-                                            Width="150"
-                                        />
-                                    </StackPanel>
+                                            <AutoSuggestBox Name="MyAutoSuggestBox"
+                                                            PlaceholderText="Search"
+                                                            TextChanged="MyAutoSuggestBox_TextChanged"
+                                                            SuggestionChosen="MyAutoSuggestBox_SuggestionChosen"
+                                                            PointerEntered="MyAutoSuggestBox_PointerEntered"
+                                                            Width="150">
+                                                <AutoSuggestBox.ItemTemplate>
+                                                    <DataTemplate x:DataType="local:Person">
+                                                        <TextBlock Text="{x:Bind Name, Mode=OneWay}"/>
+                                                    </DataTemplate>
+                                                </AutoSuggestBox.ItemTemplate>
+                                            </AutoSuggestBox>
+                                        </StackPanel>
                                 </Flyout>
                             </Button.Flyout>
 
@@ -136,7 +141,7 @@
 
                     <ListView
                         Grid.Row="1"
-                        ItemsSource="{x:Bind RemaindersForMe}"
+                        ItemsSource="{x:Bind Remainders, Mode=OneWay}"
                         Name="MyRemainders"
                         SelectionMode="None"
                         IsItemClickEnabled="True"
@@ -148,11 +153,18 @@
                                 <StackPanel  Background="Pink" Width="400"
                                     Margin="0,0,0,5" Name="ListOfRemainders" Tapped="ListOfRemainders_Tapped" Orientation="Vertical" 
                                      VerticalAlignment="Stretch"  >
-                                    <TextBlock Text="{x:Bind Description}" />
-                                    <TextBlock Visibility="{x:Bind isDateAndTimeSet(dateandtime)}" Text="{x:Bind dateandtime}"/>
+                                    <TextBlock Text="{x:Bind Description, Mode=OneWay}" />
+                                    <TextBlock Visibility="{x:Bind isDateAndTimeSet(DateAndTimeStr)}" Text="{x:Bind DateAndTimeStr, Mode=OneWay}"/>
                                     <StackPanel Orientation="Horizontal" >
-                                        <TextBlock Name="AssignedTo" Visibility="{x:Bind CheckWhetherAssignedOrNot(zuids)}" Text="Assigned to" Margin="0,0,5,0" />
-                                        <TextBlock Visibility="{x:Bind CheckWhetherAssignedOrNot(zuids)}" Text="{x:Bind getPersonsList(zuids)}"/>
+                                        <TextBlock Name="AssignedTo"  Text="Assigned to" Margin="0,0,5,0" />
+                                        <ListView ItemsSource="{x:Bind People, Mode=OneWay}">
+                                            <ListView.ItemTemplate>
+                                                <DataTemplate x:DataType="local:Person">
+                                                    <TextBlock Text="{x:Bind Name, Mode=OneWay}"/>
+                                                </DataTemplate>
+                                            </ListView.ItemTemplate>
+                                        </ListView>
+                                        <!--<TextBlock Visibility="{x:Bind CheckWhetherAssignedOrNot(zuids)}" Text="{x:Bind getPersonsList(zuids)}"/>-->
                                     </StackPanel>
                                     <FlyoutBase.AttachedFlyout>
                                         <Flyout Placement="Left" >
@@ -167,36 +179,48 @@
                                                     <ColumnDefinition Width="1*"/>
                                                     <ColumnDefinition Width="1*"/>
                                                 </Grid.ColumnDefinitions>
-                                                <TextBox Margin="0,0,0,2" Grid.ColumnSpan="2" Text="{x:Bind Description}"/>
-                                                <Button Margin="0,0,0,2" HorizontalAlignment="Stretch" Name="DateAndTimeFlyout" Grid.Row="1" Grid.ColumnSpan="2" Content="{x:Bind DateAndTime.ToString()}">
+                                                <TextBox Margin="0,0,0,2" Grid.ColumnSpan="2" Text="{x:Bind Description, Mode=TwoWay}"/>
+                                                <Button Margin="0,0,0,2" HorizontalAlignment="Stretch" 
+                                                        Name="DateAndTimeFlyout" Grid.Row="1" Grid.ColumnSpan="2" Content="{x:Bind DateAndTime.ToString()}">
                                                     <Button.Flyout>
                                                         <Flyout>
                                                             <CalendarView 
-                                                        Name="FlyoutCalender"  SelectedDatesChanged="FlyoutCalender_SelectedDatesChanged"
+                                                        Name="FlyoutCalender"  
                                                              />
                                                         </Flyout>
                                                     </Button.Flyout>
                                                 </Button>
                                                 <StackPanel Grid.Row="2">
-                                                    <TextBlock Visibility="{x:Bind CheckWhetherAssignedOrNot(zuids)}" Text="Assigned to" />
+                                                    <TextBlock  Text="Assigned to" />
                                                     <Button Name="AddMorePeople" Content="+" CornerRadius="25" FontSize="20">
                                                         <Button.Flyout>
                                                             <Flyout>
                                                                 <StackPanel >
-                                                                    <AutoSuggestBox 
-                                                                        Name="MyAutoSuggestBox1" 
-                                                                        PlaceholderText="Search"  
-                                                                        Width="150"
-                                                                        SuggestionChosen="MyAutoSuggestBox1_SuggestionChosen"
-                                                                        TextChanged="MyAutoSuggestBox_TextChanged"
-                                                                        PointerEntered="MyAutoSuggestBox_PointerEntered"
-                                                                        Tag="{x:Bind RemainderId}"
-                                                                     />
+                                                                    <AutoSuggestBox Name="MyAutoSuggestBox1"
+                                                                                    PlaceholderText="Search"
+                                                                                    Width="150"
+                                                                                    SuggestionChosen="MyAutoSuggestBox1_SuggestionChosen"
+                                                                                    TextChanged="MyAutoSuggestBox_TextChanged"
+                                                                                    PointerEntered="MyAutoSuggestBox_PointerEntered"
+                                                                                    Tag="{x:Bind RemainderId}">
+                                                                        <AutoSuggestBox.ItemTemplate>
+                                                                            <DataTemplate x:DataType="local:Person">
+                                                                                <TextBlock Text="{x:Bind Name, Mode=OneWay}"/>
+                                                                            </DataTemplate>
+                                                                           
+                                                                        </AutoSuggestBox.ItemTemplate>
+                                                                    </AutoSuggestBox>
                                                                 </StackPanel>
                                                             </Flyout>
                                                         </Button.Flyout>
                                                     </Button>
-                                                    <TextBlock Text="{x:Bind getPersonsList(zuids)}" />
+                                                    <ListView ItemsSource="{x:Bind People, Mode=OneWay}">
+                                                        <ListView.ItemTemplate>
+                                                            <DataTemplate x:DataType="local:Person">
+                                                                <TextBlock Text="{x:Bind Name, Mode=OneWay}"/>
+                                                            </DataTemplate>
+                                                        </ListView.ItemTemplate>
+                                                    </ListView>
                                                 </StackPanel>
                                                 <Button Tag="{x:Bind RemainderId}"  Margin="0,0,2,0" Name="MarkAsComplete" Content="MarkAsComplete" Click="MarkAsComplete_Click" Grid.Row="3" />
                                                 <Button Tag="{x:Bind RemainderId}"  Name="DeleteButton" Content="Delete" Click="DeleteButton_Click" Grid.Row="3" Grid.Column="1" />
@@ -212,7 +236,7 @@
             </SplitView.Pane>
 
             <SplitView.Content>
-                <TextBlock FlowDirection="RightToLeft"  HorizontalAlignment="Right" Name="Testing" FontSize="30" Text="" />
+                <TextBlock FlowDirection="RightToLeft"  HorizontalAlignment="Right" Name="Testing" FontSize="30" Text="You are my boy" />
             </SplitView.Content>
         </SplitView>
 
