--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Remainders"
+    
     xmlns:data="using:Remainders"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -46,29 +47,33 @@
                             Name="PeopleRelativePanel"
                             
                             >
-                                <Button 
+                            <Button 
                                     Name="People"
                                     Content="&#xE716;" 
                                     FontFamily="Segoe MDL2 Assets" 
                                     FontSize="30"
                                 >
-                                
-                                <Button.Flyout>
-                                <Flyout>
-                                    <StackPanel >
-                                        <AutoSuggestBox 
-                                            Name="MyAutoSuggestBox" 
-                                            PlaceholderText="Search"  
-                                            TextChanged="MyAutoSuggestBox_TextChanged" 
-                                            SuggestionChosen="MyAutoSuggestBox_SuggestionChosen"
-                                            PointerEntered="MyAutoSuggestBox_PointerEntered"
-                                            Width="150"
-                                        />
-                                    </StackPanel>
-                                </Flyout>
-                            </Button.Flyout>
 
-                                </Button>
+                                <Button.Flyout>
+                                    <Flyout>
+                                        <StackPanel >
+                                            <AutoSuggestBox Name="MyAutoSuggestBox"
+                                                            PlaceholderText="Search"
+                                                            TextChanged="MyAutoSuggestBox_TextChanged"
+                                                            SuggestionChosen="MyAutoSuggestBox_SuggestionChosen"
+                                                            PointerEntered="MyAutoSuggestBox_PointerEntered"
+                                                            Width="150">
+                                                <AutoSuggestBox.ItemTemplate>
+                                                    <DataTemplate x:DataType="local:Person">
+                                                        <TextBlock Text="{x:Bind Name, Mode=OneWay}"/>
+                                                    </DataTemplate>
+                                                </AutoSuggestBox.ItemTemplate>
+                                            </AutoSuggestBox>
+                                        </StackPanel>
+                                    </Flyout>
+                                </Button.Flyout>
+
+                            </Button>
                             <Button
                                     Name="PeopleRemoveButton"
                                     Content="X" 
@@ -81,13 +86,6 @@
                                     Click="PeopleRemoveButton_Click"
                                  >
                                 <ToolTipService.ToolTip>
-                                    <!--<GridView ItemsSource="{x:Bind peopleAdded}" >
-                                    <GridView.ItemTemplate>
-                                        <DataTemplate x:DataType="data:Person" >
-                                            <TextBlock Text="{x:Bind name}"/>
-                                        </DataTemplate>
-                                    </GridView.ItemTemplate>
-                                </GridView>-->
                                     <TextBlock Text="{x:Bind peopleIncludedforOneRemainder,Mode=TwoWay}"/>
                                 </ToolTipService.ToolTip>
                             </Button>
@@ -105,7 +103,7 @@
                                 <Flyout>
                                     <StackPanel Orientation="Vertical" Grid.Row="1"  Margin="20,20,0,0" Grid.Column="1"  >
                                         <Border Margin="0,0,0,5" BorderBrush="Black" BorderThickness="1" >
-                                        <TextBlock  Name="DateAndTimeDisplay" FontSize="15"   Text="Today" />
+                                            <TextBlock  Name="DateAndTimeDisplay" FontSize="15"   Text="Today" />
                                         </Border>
                                         <CalendarDatePicker DateChanged="Calendar_DateChanged"  Name="Calendar" HorizontalAlignment="Left"  />
                                         <TimePicker Name="SetTime1"  Margin="0,10,0,0" />
@@ -136,7 +134,7 @@
 
                     <ListView
                         Grid.Row="1"
-                        ItemsSource="{x:Bind RemaindersForMe}"
+                        ItemsSource="{x:Bind RemaindersForMe, Mode=OneWay}"
                         Name="MyRemainders"
                         SelectionMode="None"
                         IsItemClickEnabled="True"
@@ -148,11 +146,19 @@
                                 <StackPanel  Background="Pink" Width="400"
                                     Margin="0,0,0,5" Name="ListOfRemainders" Tapped="ListOfRemainders_Tapped" Orientation="Vertical" 
                                      VerticalAlignment="Stretch"  >
-                                    <TextBlock Text="{x:Bind Description}" />
-                                    <TextBlock Visibility="{x:Bind isDateAndTimeSet(dateandtime)}" Text="{x:Bind dateandtime}"/>
+                                    <TextBlock Text="{x:Bind Description, Mode=OneWay}" />
+                                    <TextBlock Visibility="{x:Bind isDateAndTimeSet(DateAndTimeStr),Mode=OneWay}" Text="{x:Bind DateAndTimeStr, Mode=OneWay}"/>
                                     <StackPanel Orientation="Horizontal" >
-                                        <TextBlock Name="AssignedTo" Visibility="{x:Bind CheckWhetherAssignedOrNot(zuids)}" Text="Assigned to" Margin="0,0,5,0" />
-                                        <TextBlock Visibility="{x:Bind CheckWhetherAssignedOrNot(zuids)}" Text="{x:Bind getPersonsList(zuids)}"/>
+                                        <TextBlock   Name="AssignedTo" Visibility="{x:Bind CheckWhetherAssignedOrNot(People), Mode=OneWay}"  Text="Assigned to" Margin="0,0,5,0" />
+                                        <ListView ItemsSource="{x:Bind People, Mode=OneWay}">
+                                            <ListView.ItemTemplate>
+                                                <DataTemplate x:DataType="local:Person">
+                                                    <Button Content="{x:Bind Name, Mode=OneWay}">
+                                                    </Button>
+                                                </DataTemplate>
+                                            </ListView.ItemTemplate>
+                                        </ListView>
+                                        <!--<TextBlock Visibility="{x:Bind CheckWhetherAssignedOrNot(zuids)}" Text="{x:Bind getPersonsList(zuids)}"/>-->
                                     </StackPanel>
                                     <FlyoutBase.AttachedFlyout>
                                         <Flyout Placement="Left" >
@@ -167,36 +173,53 @@
                                                     <ColumnDefinition Width="1*"/>
                                                     <ColumnDefinition Width="1*"/>
                                                 </Grid.ColumnDefinitions>
-                                                <TextBox Margin="0,0,0,2" Grid.ColumnSpan="2" Text="{x:Bind Description}"/>
-                                                <Button Margin="0,0,0,2" HorizontalAlignment="Stretch" Name="DateAndTimeFlyout" Grid.Row="1" Grid.ColumnSpan="2" Content="{x:Bind DateAndTime.ToString()}">
+                                                <TextBox Margin="0,0,0,2" Grid.ColumnSpan="2" Text="{x:Bind Description, Mode=TwoWay}"/>
+                                                <Button Margin="0,0,0,2" HorizontalAlignment="Stretch" 
+                                                        Name="DateAndTimeFlyout" Grid.Row="1" Grid.ColumnSpan="2" Content="{x:Bind DateAndTime.ToString()}">
                                                     <Button.Flyout>
                                                         <Flyout>
-                                                            <CalendarView 
-                                                        Name="FlyoutCalender"  SelectedDatesChanged="FlyoutCalender_SelectedDatesChanged"
-                                                             />
+                                                            <CalendarView  Name="FlyoutCalender"/>
                                                         </Flyout>
                                                     </Button.Flyout>
                                                 </Button>
                                                 <StackPanel Grid.Row="2">
-                                                    <TextBlock Visibility="{x:Bind CheckWhetherAssignedOrNot(zuids)}" Text="Assigned to" />
+                                                    <TextBlock Visibility="{x:Bind CheckWhetherAssignedOrNot(People), Mode=OneWay}"  Text="Assigned to" />
                                                     <Button Name="AddMorePeople" Content="+" CornerRadius="25" FontSize="20">
                                                         <Button.Flyout>
                                                             <Flyout>
                                                                 <StackPanel >
-                                                                    <AutoSuggestBox 
-                                                                        Name="MyAutoSuggestBox1" 
-                                                                        PlaceholderText="Search"  
-                                                                        Width="150"
-                                                                        SuggestionChosen="MyAutoSuggestBox1_SuggestionChosen"
-                                                                        TextChanged="MyAutoSuggestBox_TextChanged"
-                                                                        PointerEntered="MyAutoSuggestBox_PointerEntered"
-                                                                        Tag="{x:Bind RemainderId}"
-                                                                     />
+                                                                    <AutoSuggestBox Name="MyAutoSuggestBox1"
+                                                                                    PlaceholderText="Search"
+                                                                                    Width="150"
+                                                                                    SuggestionChosen="MyAutoSuggestBox1_SuggestionChosen"
+                                                                                    TextChanged="MyAutoSuggestBox_TextChanged"
+                                                                                    PointerEntered="MyAutoSuggestBox_PointerEntered"
+                                                                                    Tag="{x:Bind RemainderId, Mode=OneWay}">
+                                                                        <AutoSuggestBox.ItemTemplate>
+                                                                            <DataTemplate x:DataType="local:Person">
+                                                                                <TextBlock Text="{x:Bind Name, Mode=OneWay}">
+                                                                                </TextBlock>
+                                                                            </DataTemplate>
+
+                                                                        </AutoSuggestBox.ItemTemplate>
+                                                                    </AutoSuggestBox>
                                                                 </StackPanel>
                                                             </Flyout>
                                                         </Button.Flyout>
                                                     </Button>
-                                                    <TextBlock Text="{x:Bind getPersonsList(zuids)}" />
+                                                    <ListView ItemsSource="{x:Bind People, Mode=OneWay}">
+                                                        <ListView.ItemTemplate>
+                                                            <DataTemplate x:DataType="local:Person">
+                                                                <Button Content="{x:Bind Name, Mode=OneWay}">
+                                                                    <Button.Flyout>
+                                                                        <Flyout>
+                                                                            <TextBlock Text="Information"/>
+                                                                        </Flyout>
+                                                                    </Button.Flyout>
+                                                                </Button>
+                                                            </DataTemplate>
+                                                        </ListView.ItemTemplate>
+                                                    </ListView>
                                                 </StackPanel>
                                                 <Button Tag="{x:Bind RemainderId}"  Margin="0,0,2,0" Name="MarkAsComplete" Content="MarkAsComplete" Click="MarkAsComplete_Click" Grid.Row="3" />
                                                 <Button Tag="{x:Bind RemainderId}"  Name="DeleteButton" Content="Delete" Click="DeleteButton_Click" Grid.Row="3" Grid.Column="1" />
